capsules/spectral-bridge/tests/ui/reciprocal_resonance_cannot_be_forged.rs
use spectral_bridge_server::reciprocal_experiential::{
    ReciprocalResonanceRelationV1, ReciprocalResonanceSignatureV1,
};

fn main() {
    let _forged = ReciprocalResonanceSignatureV1::new(
        "resonance_1".into(),
        format!("lsw_{}", "a".repeat(64)),
        "b".repeat(64),
        vec!["bridge.lambda1".into()],
        ReciprocalResonanceRelationV1::TemporalAssociationOnly,
    );
}
